Create and update section
It is this update I create and update the sections
